# galvASR

./: .dir-locals.el  .gitignore  .gitmodules  .style.yapf  CMakeLists.txt  MANIFEST.in  README.md  WORKSPACE  kaldi.BUILD  pylintrc  pyproject.toml  setup.cfg  setup.py
cmake/: FindCuDNN.cmake  external.cmake
galvASR/: CMakeLists.txt
galvASR/alpha_computer_nnet3/: alpha_computer_nnet3.cc  alpha_computer_nnet3.h
galvASR/caffe2/: CMakeLists.txt  kaldi_ark_input.cc  kaldi_ark_input.h
galvASR/caffe2_ext/: CMakeLists.txt  kaldi_ark_input.cc  kaldi_ark_input.h  kaldi_ark_input_gpu.cc  kaldidb.cc  kaldidb.h  kaldivectordb.h
galvASR/caffe2_ext/simple_ctc/: CMakeLists.txt  simple_ctc_kernels.cuh  simple_ctc_op.cc  simple_ctc_op.cu  simple_ctc_op.h
galvASR/cmake/: external.cmake
galvASR/cmake/tensorflow/: CMakeLists.txt
galvASR/examples/mini_librispeech/: run.py  run_tf_tdnn.py  run_wav2letter.py
galvASR/include/galvASR/tensorflow_decoder/: tensorflow_decoder.hpp
galvASR/include/galvASR/utils/: utils.hpp
galvASR/python/: .gitignore  CMakeLists.txt  _constants.py.in  constants.py.in  kaldi_environment.py  kaldi_io.py
galvASR/python/fst_ext/: __init__.py  spelling_fst.py
galvASR/python/tensorflow/: _gen_dataset_ops.py  kaldi_table_dataset.py
galvASR/python/tensorflow_ext/: _gen_dataset_ops.py  kaldi_table_dataset.py  tdnn.py  test_kaldi_table_reader.py
galvASR/src/tensorflow_decoder/: tensorflow_decoder.cpp
galvASR/tensorflow_ext/: CMakeLists.txt  decoder_kernels.cc  decoder_ops.cc  fst_to_csr.cc.ignore  kaldi_dataset_ops.cc  kaldi_variants.h
galvASR/tensorflow_ext/persistent_rnn/: persistent_rnn.cuh
scripts/: install.sh
scripts/docker/: build.sh
scripts/docker/DefaultBuild/: Dockerfile
src/: CMakeLists.txt
src/cmake/: external.cmake  utils.cmake
src/galvASR/: CMakeLists.txt
src/galvASR/caffe2_ext/: kaldi_ark_input.h  kaldi_ark_input_gpu.cc
src/galvASR/examples/mini_librispeech/: run.py  run_tf_tdnn.py  run_wav2letter.py
src/galvASR/fst_ext/: fst_to_csr.cc
src/galvASR/python/: kaldi_environment.py  kaldi_io.py  test_util.py  util.py
src/galvASR/python/fst_ext/: spelling_fst.py
src/galvASR/python/tensorflow_ext/: BUILD  _gen_dataset_ops.py  feats.scp  kaldi_table_dataset.py  tdnn.py  test_kaldi_table_dataset.py  test_kaldi_table_reader.py  test_tdnn.py  util.py
src/galvASR/sandbox/cublasSgemmStridedBatched/: main.cu
src/galvASR/tensorflow_ext/: CMakeLists.txt  kaldi_dataset_kernels.cc  kaldi_dataset_ops.cc
src/galvASR/tensorflow_ext/persistent_rnn/: persistent_rnn.cuh
test/python/tensorflow_ext/: test_kaldi_table_dataset.py  test_tdnn.py
